feat(form-inputs-section.component): add toggleable card

--- a/src/app/components/shared/sections/form-inputs-section/form-inputs-section.component.html
+++ b/src/app/components/shared/sections/form-inputs-section/form-inputs-section.component.html
@@ -1,9 +1,22 @@
 @if (isCard()) {
-  <p-card class="bg-stone-100 dark:bg-zinc-800 shadow-md">
-    <div class="flex flex-col w-full gap-4">
-      <ng-container *ngTemplateOutlet="content" />
+  @if (header()) {
+    <div class="card">
+      <p-panel
+        class="flex flex-col w-full gap-4"
+        [header]="header()"
+        [toggleable]="true"
+        [pt]="ptValue"
+      >
+        <ng-container *ngTemplateOutlet="content" />
+      </p-panel>
     </div>
-  </p-card>
+  } @else {
+    <p-card class="bg-stone-100 dark:bg-zinc-800 shadow-md">
+      <div class="flex flex-col w-full gap-4">
+        <ng-container *ngTemplateOutlet="content" />
+      </div>
+    </p-card>
+  }
 } @else {
   <div [class]="'flex w-full gap-4 flex-col md:' + flexDir()">
     <ng-container *ngTemplateOutlet="content" />
