--- a/src/app/components/shared/sections/form-buttons-section/form-buttons-section.component.html
+++ b/src/app/components/shared/sections/form-buttons-section/form-buttons-section.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center mt-10">
+<div [class]="this.classValue()">
   <div
     class="flex flex-col flex-wrap md:flex-row-reverse w-full max-w-[50vh] md:max-w-full items-center justify-center gap-2 md:gap-5"
   >
