--- a/src/app/components/shared/inputs/search-auto-complete/search-auto-complete.component.html
+++ b/src/app/components/shared/inputs/search-auto-complete/search-auto-complete.component.html
@@ -18,6 +18,7 @@
       (focus)="onFocusInput($event)"
       (input)="valueInputChange($event)"
       [language]="language"
+      (onClear)="onCleared($event)"
       autocomplete="off"
     />
   </div>
